# reze-claw

./: .gitignore  CLAUDE.md  coral.config.toml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
agents/alpha/: Dockerfile  coral-agent.toml  package.json  pnpm-lock.yaml
agents/alpha/src/: index.ts  mcp.ts
agents/bravo/: coral-agent.toml  package.json
agents/bravo/src/: index.ts
agents/kali/: Dockerfile  MODEL_ROUTING.md  coral-agent.toml  package.json  pnpm-lock.yaml  tsconfig.json
agents/kali/skills/flux/: SKILL.md
agents/kali/src/: env.ts  generate.ts  index.ts  mcp.ts
agents/reze/: package.json  pnpm-lock.yaml
agents/reze/src/: index.ts  llm.ts  types.ts
agents/reze/src/coral/: client.ts  types.ts  ws.ts
agents/reze/src/routes/: agents.ts  chat.ts  health.ts  (+1 more)
docs/: coral-deployment.md  coral-integration.md  gateway-ui.md  multi-agent-reference.md
docs/superpowers/plans/: 2026-04-03-gateway-coral-integration.md  2026-04-05-coral-npx-rewiring.md  2026-04-05-reze-llm-chat.md
docs/superpowers/specs/: 2026-04-03-gateway-coral-integration-design.md  2026-04-05-reze-llm-chat-design.md
scripts/: dev.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/dashboard/: AgentsPanel.tsx  DashboardView.tsx  SessionDetailView.tsx  SessionsPanel.tsx  Sidebar.tsx
src/components/widget/: ChatInput.tsx  SceneView.tsx  Titlebar.tsx  WidgetView.tsx
src/shared/: tauri.ts  use-app-mode.ts  use-reze.ts
