[package]
name = "reze-claw"
version = "0.1.0"
edition = "2021"

[lib]
name = "reze_claw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "reze-claw"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
